Shop overflow fixed in header comp

--- a/src/app/shared/components/mobile-navbar/mobile-navbar.component.css
+++ b/src/app/shared/components/mobile-navbar/mobile-navbar.component.css
@@ -1,3 +1,16 @@
+#mobile-navbar {
+	position: absolute;
+	display: none;
+	top: 0;
+	right: -100%;
+	padding: 4rem 2rem;
+	width: 100%;
+	height: 100vh;
+	background: var(--clr-white);
+	z-index: 3;
+	transition: right 400ms cubic-bezier(0.77, 0.22, 0.175, 1);
+}
+
 .navigation-wrapper {
 	display: flex;
 	justify-content: flex-start;
@@ -279,4 +292,17 @@
   100% {
     opacity: 1;
   }
+}
+
+/* Responsive Style */
+@media screen and (max-width: 900px) {
+	#mobile-navbar.nav-active {
+		position: fixed;
+		right: 0;
+	}
+
+	#mobile-navbar,
+	.nav-toggle {
+		display: block;
+	}
 }
