--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,4 +1,5 @@
 #main-header {
+	position: relative;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -93,22 +94,8 @@
 
 }
 
-/* Mobile Navigation ========================================================== */
-#mobile-navbar {
-	position: absolute;
-	display: none;
-	top: 0;
-	right: -100%;
-	padding: 4rem 2rem;
-	width: 100%;
-	height: 100vh;
-	background: var(--clr-white);
-	z-index: 3;
-	transition: right 400ms cubic-bezier(0.77, 0.22, 0.175, 1);
-}
-
 #main-header.nav-dark {
-    position: initial;
+    position: relative;
 }
 
 #main-header.nav-dark #top-navbar {
