--- a/src/app/shop/components/cart/cart.component.css
+++ b/src/app/shop/components/cart/cart.component.css
@@ -1,4 +1,5 @@
 #cart-container {
+    position: relative;
     position: fixed;
     top: 0;
     right: 0;
