--- a/src/styles.css
+++ b/src/styles.css
@@ -279,26 +279,6 @@ p {
 	--aspect-ratio: 100/50;
 }
 
-/* CART */
-/* #cart-container {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100vh;
-    opacity: 0;
-    z-index: -1;
-    background:#0406078b;
-    transition: opacity ease 0.3s, 
-                z-index ease 0.5s;
-		overflow-x: hidden;
-}
-
-#cart-container.cart-active {
-    opacity: 1;
-    z-index: 6;
-} */
-
 .no-scroll {
     overflow-y: hidden;
 }
